--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     
     <p>Over time, this project aims to evolve — bringing <strong>rewards, utility</strong>, and new experiences for its holders. It’s not just a collection; it’s the beginning of a movement.</p>
     
-    <a href="#markets" class="cta">Join the Mission</a>
+    <a href="https://x.com/TradersNFTC" class="cta">Join Community</a>
   </div>
 </section>
 
