--- a/index.html
+++ b/index.html
@@ -3,14 +3,48 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Traders</title>
-  <link rel="icon" href="logo.png" type="image/png">
-  <link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-/>
 
- <link rel="stylesheet" href="styles.css">
+  <title>Traders NFT Collection | Pixel Art for Crypto Traders</title>
+  <meta name="description" content="Traders NFT Collection — 8,888 handcrafted pixel avatars that celebrate the spirit and creativity of crypto traders around the world. Join the Traders revolution.">
+  <meta name="keywords" content="Traders NFT, pixel art, NFT collection, crypto art, blockchain, digital collectibles, Web3, NFT marketplace, pixel traders">
+  <meta name="author" content="Traders NFT Team">
+  <meta name="robots" content="index, follow">
+
+  <link rel="icon" href="logo.png" type="image/png">
+
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://tradersnftc.xyz/">
+  <meta property="og:title" content="Traders NFT Collection">
+  <meta property="og:description" content="Explore the Traders NFT pixel art collection — 8,888 unique avatars representing the life and passion of crypto traders.">
+  <meta property="og:image" content="https://tradersnftc.xyz/logo.png">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Traders NFT Collection">
+  <meta name="twitter:description" content="Pixel art meets crypto trading — discover the 8,888 unique Traders NFTs.">
+  <meta name="twitter:image" content="https://tradersnftc.xyz/logo.png">
+  <meta name="twitter:creator" content="@TradersNFTC">
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Collection",
+    "name": "Traders",
+    "description": "A pixel-art NFT collection of 8,888 traders that embody creativity, resilience, and community in the crypto space.",
+    "url": "https://tradersnftc.xyz/",
+    "image": "https://tradersnftc.xyz/logo.png",
+    "creator": {
+      "@type": "Person",
+      "name": "CryptoDohh",
+      "url": "https://tradersnftc.xyz/"
+    }
+  }
+  </script>
+
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+  />
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <canvas id="bg-stars"></canvas>
