--- a/index.html
+++ b/index.html
@@ -148,14 +148,19 @@
     </section>
   </main>
 
-    <footer>
+  <footer>
     <p>
-      Follow us on 
+      Email:
+      <a href="mailto:contact@tradersnftc.xyz">
+        Contact@tradersnftc.xyz
+      </a>
+      &nbsp;|&nbsp;
+      Follow us on
       <a href="https://x.com/TradersNFTC" target="_blank">
         <i class="fa-brands fa-x-twitter"></i>
       </a>
       &nbsp;|&nbsp;
-      View on 
+      View on
       <a href="https://etherscan.io/address/0x264a1727A9d97984f623627daAE058be9E5F342C" target="_blank">
         <i class="fa-brands fa-ethereum"></i> Ethereum
       </a>
