--- a/index.html
+++ b/index.html
@@ -155,14 +155,19 @@
         Contact@tradersnftc.xyz
       </a>
       &nbsp;|&nbsp;
-      Follow us on
+      Follow on
       <a href="https://x.com/TradersNFTC" target="_blank">
         <i class="fa-brands fa-x-twitter"></i>
       </a>
       &nbsp;|&nbsp;
       View on
+      <a href="https://github.com/tradersnftclub/traders-nft" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-github"></i> GitHub
+      </a>
+      &nbsp;|&nbsp;
+      Contract:
       <a href="https://etherscan.io/address/0x264a1727A9d97984f623627daAE058be9E5F342C" target="_blank">
-        <i class="fa-brands fa-ethereum"></i> Ethereum
+        <i class="fa-brands fa-ethereum"></i> Etherscan
       </a>
     </p>
   </footer>
