--- a/index.html
+++ b/index.html
@@ -148,28 +148,26 @@
     </section>
   </main>
 
-  <footer>
-    <p>
+  <footer style="text-align: center;">
+    <div>
       Email:
       <a href="mailto:contact@tradersnftc.xyz">
         Contact@tradersnftc.xyz
       </a>
-      &nbsp;|&nbsp;
-      Follow on
+    </div>
+    <div style="display: flex; justify-content: center; gap: 20px; font-size: 0.9rem;">
       <a href="https://x.com/TradersNFTC" target="_blank">
+        Follow on
         <i class="fa-brands fa-x-twitter"></i>
       </a>
-      &nbsp;|&nbsp;
-      View on
       <a href="https://github.com/tradersnftclub/traders-nft" target="_blank" rel="noopener noreferrer">
-        <i class="fab fa-github"></i> GitHub
+        View
+        <i class="fab fa-github"></i>
       </a>
-      &nbsp;|&nbsp;
-      Contract:
       <a href="https://etherscan.io/address/0x264a1727A9d97984f623627daAE058be9E5F342C" target="_blank">
         <i class="fa-brands fa-ethereum"></i> Etherscan
       </a>
-    </p>
+    </div>
   </footer>
 
   
