--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <div class="creator">
         <img src="img/CryptoDohh.jpg" alt="CryptoDohh" onerror="this.src='traders.png'">
         <h3>CryptoDohh</h3>
-        <p>A trader, dreamer, and builder — soon to bridge markets and art in a single pixel. Every drop, every chart, and every candle will inspire the next creation.</p>
+        <p>Developer, trader, and crypto enthusiast since 2017 & Pixel NFT Artist. My journey in trading and NFTs has been full of ups and downs, learning from every mistake while experimenting with pixel art and exploring every corner of the crypto world. Every day is an opportunity to grow, create, and connect with communities that share the same passion.</p>
         <a href="https://x.com/CryptoDohh" target="_blank">Follow on <i class="fa-brands fa-x-twitter"></i></a>
       </div>
     </section>
