--- a/index.html
+++ b/index.html
@@ -45,8 +45,22 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
   />
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="game.css">
 </head>
 <body>
+  <div id="game-modal" class="hidden">
+  <div id="game-overlay"></div>
+  <div id="game-container">
+    <h1>👾 Traders Memory</h1>
+    <div id="game-board"></div>
+    <div id="score">Attempts: 0 | Matches: 0</div>
+    <button id="reset-btn">RESET</button>
+    <button id="close-btn">✖</button>
+    <canvas id="confetti"></canvas>
+  </div>
+</div>
+
+<button id="game-btn" title="Play Traders Game">👾</button>
   <canvas id="bg-stars"></canvas>
 
   <header>
@@ -172,5 +186,6 @@
 
   
   <script src="script.js"></script>
+  <script src="game.js"></script>
 </body>
 </html>
