--- a/index.html
+++ b/index.html
@@ -164,6 +164,12 @@
 
   <footer style="text-align: center;">
     <div>
+      <a href="https://nftcalendar.io/" target="_blank">
+        <img src="img/nftcalendar-icon.svg" alt="NFT Calendar" width="100">
+      </a>
+    
+    </div>
+    <div>
       Email:
       <a href="mailto:contact@tradersnftc.xyz">
         Contact@tradersnftc.xyz
