--- a/index.html
+++ b/index.html
@@ -178,6 +178,9 @@
         View
         <i class="fab fa-github"></i>
       </a>
+      <a href="https://docs.tradersnftc.xyz/" target="_blank">
+        <i class="fa-solid fa-book"></i> GitBook
+      </a>
       <a href="https://etherscan.io/address/0x264a1727A9d97984f623627daAE058be9E5F342C" target="_blank">
         <i class="fa-brands fa-ethereum"></i> Etherscan
       </a>
