--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 
     
       <div class="mint-btn-container">
-        <a href="https://opensea.io/es/collection/tradersclub/overview" target="_blank" class="mint-btn">
-          <span class="mint-text">👾 Mint on OpenSea</span>
+        <a href="" target="_blank" class="mint-btn">
+          <span class="mint-text">👾 Mint (Soon)</span>
           <span class="mint-arrow">➜</span>
         </a>
       </div>
