--- a/index.html
+++ b/index.html
@@ -86,10 +86,15 @@
 
     
       <div class="mint-btn-container">
-        <a href="" target="_blank" class="mint-btn">
-          <span class="mint-text">👾 Mint (Soon)</span>
-          <span class="mint-arrow">➜</span>
-        </a>
+      <a href="https://opensea.io/es/collection/tradersclub" target="_blank" class="eth">
+        <img src="https://cryptologos.cc/logos/ethereum-eth-logo.png">
+        <span class="label"><strong>View on OpenSea</strong></span>
+      </a>
+      
+      <a href="https://marketplace.roninchain.com/collections/traders" target="_blank" class="ronin">
+        <img src="https://assets.coingecko.com/coins/images/20009/large/ronin.png">
+        <span class="label"><strong>View on Ronin</strong></span>
+      </a>
       </div>
     </section>
 
