--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
         <span class="label"><strong>View on OpenSea</strong></span>
       </a>
       
-      <a href="https://marketplace.roninchain.com/collections/traders" target="_blank" class="ronin">
+      <a href="https://marketplace.roninchain.com/launchpads/mints/traders" target="_blank" class="ronin">
         <img src="https://assets.coingecko.com/coins/images/20009/large/ronin.png">
-        <span class="label"><strong>View on Ronin</strong></span>
+        <span class="label"><strong>Go to Launchpad</strong></span>
       </a>
       </div>
     </section>
